// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlanCard > renders the badge on the white card 1`] = `
<div>
  <div
    class="rounded-2xl p-3 text-left border border-pca-grey-200 bg-pca-white dark:border-pca-grey-700 dark:bg-pca-grey-900"
  >
    <div
      class="mb-2 flex h-6.5 items-center sm:hidden"
    >
      <span
        class="inline-flex items-center justify-center rounded-full px-3 py-1 bg-pca-blue-300"
      >
        <span
          class="antialiased font-inter text-xs text-pca-blue-900 dark:text-pca-blue-900 font-semibold leading-[18px] tracking-[0.02em]"
        >
          Current
        </span>
      </span>
    </div>
    <div
      class="flex items-start justify-between gap-2"
    >
      <p
        class="antialiased font-inter text-xs text-pca-grey-600 dark:text-pca-grey-400 font-semibold leading-[18px] tracking-[0.02em]"
      >
        Pencil Case Free
      </p>
      <div
        class="-mt-1 -mr-1 hidden shrink-0 sm:block"
      >
        <span
          class="inline-flex items-center justify-center rounded-full px-3 py-1 bg-pca-blue-300"
        >
          <span
            class="antialiased font-inter text-xs text-pca-blue-900 dark:text-pca-blue-900 font-semibold leading-[18px] tracking-[0.02em]"
          >
            Current
          </span>
        </span>
      </div>
    </div>
    <p
      class="flex items-baseline gap-2 mt-1 flex-wrap gap-x-1.5 [&>span:first-child]:text-3xl"
    >
      <span
        class="antialiased font-inter text-5xl text-pca-grey-900 dark:text-white font-semibold"
      >
        0 €
      </span>
      <span
        class="antialiased font-inter text-sm text-pca-grey-600 dark:text-pca-grey-400 font-medium"
      >
        / year
      </span>
    </p>
  </div>
</div>
`;

exports[`PlanCard > renders the plan and its price on the yellow card 1`] = `
<div>
  <div
    class="rounded-2xl p-3 text-left bg-pca-yellow-500 border border-pca-grey-900 -rotate-1 transition-transform duration-150 ease-out has-[button:hover]:rotate-0 motion-reduce:transition-none motion-reduce:has-[button:hover]:-rotate-1"
  >
    <div
      class="mb-2 flex h-6.5 items-center sm:hidden"
    />
    <div
      class="flex items-start justify-between gap-2"
    >
      <p
        class="antialiased font-inter text-xs text-pca-yellow-900 dark:text-pca-yellow-900 font-semibold leading-[18px] tracking-[0.02em]"
      >
        Pencil Case Pro
      </p>
    </div>
    <p
      class="flex items-baseline gap-2 mt-1 flex-wrap gap-x-1.5 [&>span:first-child]:text-3xl"
    >
      <span
        class="antialiased font-inter text-5xl text-pca-grey-900 dark:text-pca-grey-900 font-semibold"
      >
        25 €
      </span>
      <span
        class="antialiased font-inter text-sm text-pca-yellow-900 dark:text-pca-yellow-900 font-medium"
      >
        / year
      </span>
    </p>
  </div>
</div>
`;
